--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}" media="screen" type="text/css">
     <link rel="stylesheet" href="{{ '/assets/css/print.css' | relative_url }}" media="print" type="text/css">
-
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans:700|Noto+Serif&display=swap" rel="stylesheet">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -19,7 +19,8 @@
     <header>
       <div class="inner">
         <a href="/{{page.lang}}/main/"> 
-          <h1>{{ site.title }}</h1>
+          <h1>ΣΔ</h1>
+          <h2>{{ site.title }}</h2>
         </a>
       </div>
       <ul class="menu">
