Incerida aba de clientes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,9 +53,15 @@
           <p class="repo-owner" style="text-align:right;">
               {% if page.lang == "pt" %}
               Email: consulting@sigmadelta.tech<br>
+              End.: Av da Américas, 19.005 - Sl. 520 - Torre 1<br>
+              Recreio dos Bandeirantes - Rio de Janeiro - RJ<br>
+              CEP: 22790 - 703<br>
               Tel.: (21) 99104-0354
               {% elsif page.lang == "en" %}
               Email: consulting@sigmadelta.tech<br>
+              Add.: Av da Américas, 19.005 - Sl. 520 - Torre 1<br>
+              Recreio dos Bandeirantes - Rio de Janeiro - RJ - Brazil<br>
+              CEP: 22790 - 703<br>
               Phone: +55 21 99104-0354
               {% endif %}  
             </p>
